2009-07-28 from iZsh:
	README: Add a few information.
	cmdparser.rb: New file.
	fwpwn.rb: Likewise.
	AUTHORS: Likewise.
	LICENSE: Likewise.
	ChangeLog: Likewise.
	general/fwlist.rb: Likewise.
	general/fwmemdump.rb: Likewise.
	general/fwosdetect.rb: Likewise.
	general/fwselectoptions.rb: Likewise.
	general/memaddroptions.rb: Likewise.
	macosx/fwmacloginpwd.rb: Likewise.
	macosx/fwmacosx.rb: New files: Likewise.